glyph-cell/tests/ui/drawable_text_mismatched_cell_heights_fail.stderr
error[E0080]: evaluation panicked: CellSizes ascii and cjk heights must match
  --> tests/ui/drawable_text_mismatched_cell_heights_fail.rs:14:5
   |
14 | /     TextStyle::new(BinaryColor::On)
15 | |         .ascii_cell(Size::new(4, 8))
16 | |         .cjk_cell(Size::new(8, 9)),
   | |__________________________________^ evaluation of `_TEXT` failed inside this call
   |
note: inside `TextStyle::<BinaryColor>::cjk_cell`
  --> src/style.rs
   |
   |         self.cells = self.cells.with_cjk(size);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `CellSizes::with_cjk`
  --> $RUST/core/src/panic.rs
   |
   |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
   |
  ::: src/style.rs
   |
   | /         assert!(
   | |             self.ascii.height == 0 || self.ascii.height == cjk.height,
   | |             "CellSizes ascii and cjk heights must match"
   | |         );
   | |_________- in this macro invocation
